--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
-    <string name="add_task">New TO-DO</string>
+    <string name="add_task">New Diary</string>
 
-    <string name="edit_task">Edit TO-DO</string>
+    <string name="edit_task">Edit Diary</string>
 
     <string name="task_marked_complete">Task marked complete</string>
 
@@ -20,25 +20,25 @@
 
     <string name="menu_clear">Clear completed</string>
 
-    <string name="menu_delete_task">Delete task</string>
+    <string name="menu_delete_diary">Delete diary</string>
 
-    <string name="navigation_view_header_title">TO-DOs</string>
+    <string name="navigation_view_header_title">Diaries</string>
 
     <string name="title_hint">Title</string>
 
-    <string name="description_hint">Enter your TO-DO here.</string>
+    <string name="description_hint">Enter your diary here.</string>
 
     <string name="empty_task_message">TO DOs cannot be empty</string>
 
-    <string name="successfully_saved_task_message">TO-DO saved</string>
+    <string name="successfully_saved_task_message">Diary saved</string>
 
-    <string name="list_title">TO-DO List</string>
+    <string name="list_title">Diary List</string>
 
     <string name="statistics_title">Statistics</string>
 
-    <string name="statistics_no_tasks">You have no tasks.</string>
+    <string name="statistics_no_diary">You have no diaries.</string>
 
-    <string name="statistics_active_tasks">Active tasks:</string>
+    <string name="statistics_diaries">Diaries:</string>
 
     <string name="statistics_completed_tasks">Completed tasks:</string>
 
@@ -66,19 +66,19 @@
 
     <string name="nav_completed">Completed</string>
 
-    <string name="label_all">All TO-DOs</string>
+    <string name="label_all">All diarys</string>
 
-    <string name="label_active">Active TO-DOs</string>
+    <string name="label_active">Active diaries</string>
 
-    <string name="label_completed">Completed TO-DOs</string>
+    <string name="label_completed">Completed diaries</string>
 
-    <string name="no_tasks_all">You have no TO-DOs!</string>
+    <string name="no_tasks_all">You have no diaries!</string>
 
-    <string name="no_tasks_active">You have no active TO-DOs!</string>
+    <string name="no_tasks_active">You have no active diaries!</string>
 
-    <string name="no_tasks_completed">You have no completed TO-DOs!</string>
+    <string name="no_tasks_completed">You have no completed diaries!</string>
 
-    <string name="no_tasks_add">Add a TO-DO item +</string>
+    <string name="no_tasks_add">Add a diary item +</string>
 
     <string name="refresh">Refresh</string>
 </resources>
