feature: add about page
update support lib version because of the bug no getFont()

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,9 @@
     <string name="no_tasks_add">Add a diary item +</string>
 
     <string name="refresh">Refresh</string>
+    <string name="about_intro">This ia a good app</string>
+    <string name="about_title">About it</string>
+    <string name="translate_title">Help translate it</string>
+    <string name="share_title">Share it</string>
+    <string name="rate_title">Rate it</string>
 </resources>
