--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="translate_title">Help translate it</string>
     <string name="share_title">Share it</string>
     <string name="rate_title">Rate it</string>
+    <string name="feedback_title">Feedback</string>
 </resources>
