--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="punchcard_title">Punch Card</string>
+    <string name="longest_punch_fmt">Longest Punch: %1$d</string>
+    <string name="current_punch_fmt">Current Punch: %1$d</string>
 </resources>
