--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,8 @@
     <string name="delete">Delete</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
-    <string name="punchcard_title">Punch Card</string>
-    <string name="longest_punch_fmt">Longest Punch: %1$d</string>
-    <string name="current_punch_fmt">Current Punch: %1$d</string>
+    <string name="streak_card_title_fmt">%1$d Words Per Day</string>
+    <string name="longest_punch_fmt">Longest Streak: %1$d</string>
+    <string name="current_punch_fmt">Current Streak: %1$d</string>
     <string name="statastics_for">Statastics For</string>
 </resources>
