--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="longest_punch_fmt">Longest Streak: %1$d</string>
     <string name="current_punch_fmt">Current Streak: %1$d</string>
     <string name="statastics_for">Statastics For</string>
+    <string name="share_app_content_fmt">I like the diary book app so much, share it to you.\n %1$s</string>
 </resources>
