--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -14,7 +14,7 @@
     <string name="delete">删除</string>
     <string name="ok">好的</string>
     <string name="cancel">取消</string>
-    <string name="streak_card_title_fmt">每天 %1$d 字</string>
+    <string name="streak_card_title_fmt">每天 %1$d 个字</string>
     <string name="longest_punch_fmt">最长连击: %1$d</string>
     <string name="current_punch_fmt">当前连击: %1$d</string>
     <string name="statastics_for">统计: </string>
