bugfix: the english app intro is test string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="statistics_error">Error loading statistics.</string>
     <string name="loading">LOADING</string>
     <string name="no_diaries_all">You have no diaries!</string>
-    <string name="about_intro">This ia a good app</string>
+    <string name="about_intro">Nice to meet you! This app is made to help you write diary, enjoy it!</string>
     <string name="about_title">About it</string>
     <string name="translate_title">Help translate it</string>
     <string name="share_title">Share it</string>
