--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="statastics_for">Statastics For</string>
     <string name="share_app_content_fmt">I like the diary book app so much, share it to you.\n %1$s</string>
     <string name="app_version_fmt">v%1$s</string>
+    <string name="pref_pin_lock">PIN Lock</string>
+    <string name="pref_pin_lock_summ">Set a password to stop other to view your diary</string>
 </resources>
