--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,10 +26,8 @@
     <string name="current_punch_fmt">Current Streak: %1$d</string>
     <string name="statastics_for">Statastics For</string>
     <string name="share_app_content_fmt">I like the diary book app so much, share it to you.\n %1$s</string>
-    <string name="app_version_fmt">v%1$s</string>
-    <string name="pref_pin_lock">PIN Lock</string>
+    <string name="pref_pin_lock">Diary Lock</string>
     <string name="pref_pin_lock_summ">Set a password to stop other to view your diary</string>
-    <string name="app_lock_set_password">Set Password</string>
     <string name="app_lock_new_password_hint">Please input a new password</string>
     <string name="app_lock_password_confirm_hint">Confirm password</string>
     <string name="input_password_hint">Input Diary Password</string>
