chagnge: add map demo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="location">Location</string>
     <string name="weather">Weather</string>
     <string name="emotion">Emotion</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
