chagne: show error message when google service error
I fount this program on emulator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="weather">Weather</string>
     <string name="emotion">Emotion</string>
     <string name="title_activity_maps">Map</string>
+    <string name="google_service_error">Google service error</string>
 </resources>
