--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -39,4 +39,5 @@
     <string name="emotion">心情</string>
     <string name="title_activity_maps">地图</string>
     <string name="google_service_error">谷歌服务出现问题</string>
+    <string name="week_of_year_fmt">第 %1$d 周</string>
 </resources>
