--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="emotion">Emotion</string>
     <string name="title_activity_maps">Map</string>
     <string name="google_service_error">Google service error</string>
+    <string name="week_of_year_fmt">Week %1$d</string>
 </resources>
