--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -40,4 +40,5 @@
     <string name="title_activity_maps">地图</string>
     <string name="google_service_error">谷歌服务出现问题</string>
     <string name="week_of_year_fmt">第 %1$d 周</string>
+    <string name="edit_tools_status_location_default">你可以点击编辑按钮选择位置</string>
 </resources>
