--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="google_service_error">Google service error</string>
     <string name="week_of_year_fmt">Week %1$d</string>
+    <string name="edit_tools_status_location_default">You can select location by clicking the edit button</string>
 </resources>
