refactor: format the activity and fragment layout name

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -41,4 +41,5 @@
     <string name="google_service_error">谷歌服务出现问题</string>
     <string name="week_of_year_fmt">第 %1$d 周</string>
     <string name="edit_tools_status_location_default">你可以点击编辑按钮选择位置</string>
+    <string name="editor_hint">就从这里输入吧</string>
 </resources>
