--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -29,7 +29,7 @@
     <string name="share_app_content_fmt">这个日记软件真不错, 来试试吧。\n %1$s</string>
     <string name="pref_pin_lock">日记锁</string>
     <string name="pref_pin_lock_summ">设置密码防止其他人查看你的日记</string>
-    <string name="app_lock_new_password_hint">请输入新密码</string>
+    <string name="app_lock_new_password_hint">新密码</string>
     <string name="app_lock_password_confirm_hint">确认密码</string>
     <string name="input_password_hint">输入日记密码</string>
     <string name="password_set_dialog_title">设置密码</string>
@@ -42,4 +42,5 @@
     <string name="week_of_year_fmt">第 %1$d 周</string>
     <string name="edit_tools_status_location_default">你可以点击编辑按钮选择位置</string>
     <string name="editor_hint">就从这里输入吧</string>
+    <string name="guide_open_permission">请打开所有权限</string>
 </resources>
