--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="share_app_content_fmt">I like the diary book app so much, share it to you.\n %1$s</string>
     <string name="pref_pin_lock">Diary Lock</string>
     <string name="pref_pin_lock_summ">Set a password to stop other to view your diary</string>
-    <string name="app_lock_new_password_hint">Please input a new password</string>
+    <string name="app_lock_new_password_hint">New password</string>
     <string name="app_lock_password_confirm_hint">Confirm password</string>
     <string name="input_password_hint">Input Diary Password</string>
     <string name="password_set_dialog_title">Password Set</string>
@@ -41,4 +41,6 @@
     <string name="week_of_year_fmt">Week %1$d</string>
     <string name="edit_tools_status_location_default">You can select location by clicking the edit button</string>
     <string name="editor_hint">Please Input Here</string>
+    <string name="no_google_play_error">Google Play isn\'t installed.</string>
+    <string name="guide_open_permission">Please open permissions</string>
 </resources>
