--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">写日记</string>
     <string name="loading_diaries_error">加载日记时出错</string>
     <string name="menu_delete_diary">删除日记</string>
-    <string name="navigation_view_header_title">日记</string>
+    <string name="navigation_view_header_title">记录那些美好时光</string>
     <string name="successfully_saved_diary_message">日记保存成功</string>
     <string name="list_title">日记列表</string>
     <string name="statistics_title">统计</string>
