--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="statistics_error">Error loading statistics.</string>
     <string name="loading">LOADING</string>
     <string name="no_diaries_all">You have no diaries!</string>
-    <string name="about_intro">Nice to meet you! This app is made to help you write diary, enjoy it!</string>
+    <string name="about_intro">JDiary is a free diary app. You can record all the good times with it. Of course, you can write your bad times as you wish because it has lock stopping other to watch.</string>
     <string name="about_title">About it</string>
     <string name="translate_title">Help translate it</string>
     <string name="share_title">Share it</string>
