--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="saving">Saving...</string>
     <string name="restore">Restoring...</string>
     <string name="pref_category_privacy">Privacy</string>
+    <string name="app_slogan">Write the current and remamber the last</string>
 </resources>
