--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -57,4 +57,5 @@
     <string name="restore">恢复中...</string>
     <string name="pref_category_privacy">隐私</string>
     <string name="app_slogan">记录当下，勿忘当年</string>
+    <string name="successfully_backup">备份成功</string>
 </resources>
