--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="restore">Restoring...</string>
     <string name="pref_category_privacy">Privacy</string>
     <string name="app_slogan">Write the current and remamber the last</string>
+    <string name="successfully_backup">Backup Successfully</string>
 </resources>
