--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,7 @@
     <string name="fmt_statistics_month">%1$d</string>
     <string name="fmt_statistics_week">%1$d</string>
     <string name="fmt_statistics_day">%1$d</string>
+    <string name="pref_category_appearance">Appearance</string>
+    <string name="pref_default_font_size_title">Font Size</string>
+    <string name="pref_default_font_size_summ">Set the default font size of diary</string>
 </resources>
